slurm-scripts/logs/.ipynb_checkpoints/mem_model_grid_43953748_45-checkpoint.err
Traceback (most recent call last):
  File "/om2/user/bjmedina/auditory-memory/memory/src/model/main.py", line 37, in <module>
    from utls.runners import run_experiment_scores
  File "/om2/user/bjmedina/auditory-memory/memory/utls/runners.py", line 155
    """
       ^
IndentationError: unindent does not match any outer indentation level
